# agentic-player-10

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.gift_curator  Dockerfile.hyodo  README.md  pyproject.toml
docs/data/: ad_keywords.json  health_seasonal_risks.json  legit_domains.json  naver_search_api_compliance.md  scam_patterns.json  seasonal_events.json  tone_templates.json
docs/deployment/: 2026-06-26-playmcp-registration-guide.md
docs/design/: visual_identity.md
docs/handoff/: 2026-06-23.md
docs/outsourcing/: 2026-06-26-task4-result.json  2026-06-26-task4-tool-descriptions.md  2026-06-26-task5-dockerfile.md  README.md
docs/plans/: 2026-06-22-phase2.1-shared-infrastructure.md  2026-06-23-phase2.2-tools.md  README.md
docs/retrospectives/: phase-2.1.md  (+1 more)
scripts/: merge_dictionaries.py
shared/: ad_filter.py  config.py  http_client.py  input_coercion.py  logging.py  naver_search.py  positive_signals.py  response_builder.py  safety_filter.py  tavily_search.py
tests/: test_ad_filter.py  test_check_suspicious_message.py  test_compose_anbu.py  test_compose_gift_message.py  test_compose_parent_warning.py  test_config.py  test_curate_gifts.py  test_evaluate_gift_idea.py  test_find_real_recommendations.py  test_find_upcoming_events.py  test_gift_curator_server.py  test_http_client.py  test_hyodo_server.py  test_input_coercion.py  test_logging.py  test_naver_search.py  test_phase26_ux.py  test_positive_signals.py  test_refine_recommendation.py  test_response_builder.py  test_safety_filter.py  test_save_to_memo_chat.py  test_tavily_search.py
(+29 files in other folders)
